# eval-ast

./: CMakeLists.txt  ParseTree.hpp  ParseTreeBuilder.cpp  ParseTreeBuilder.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: ParseTree.hpp  ParseTreeBuilder.hpp
src/: BinaryOperators.hpp  CMakeLists.txt  Equation.cpp  Equation.hpp  EquationOperators.cpp  EquationOperators.hpp  ParseTree.hpp  ParseTreeBuilder.cpp  ParseTreeBuilder.hpp
tests/: CMakeLists.txt  EquationTests.cpp  ParseTreeBuilder.cpp  ParseTreeTests.cpp
tests/ParseTreeTests/: BinaryOperationTests.cpp  ConstantNodeTests.cpp
